# jewelry_gold

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.envs/local/: postgres.env
.github/workflows/: ci.yml
backend/: pyproject.toml  pytest.ini
backend/apps/users/: admin.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py
backend/docker/: Dockerfile
backend/docker/scripts/: celery_beat.sh  celery_flower.sh  celery_worker.sh
