[tool.poetry]
authors = ["radthenone"]
description = ""
license = "GNU General Public License v3"
name = "jewelry app"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
argon2-cffi = "^21.3.0"
dj-rest-auth = {extras = ["with-social"], version = "^2.2.5"}
django = "^4.1.3"
django-celery-beat = "^2.4.0"
django-cors-headers = "^3.13.0"
django-environ = "^0.9.0"
django-extensions = "^3.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.24.2"
flower = "^1.2.0"
hiredis = "^2.0.0"
psycopg2-binary = "^2.9.5"
python = "^3.10"
redis = "^4.3.4"
watchfiles = "^0.18.1"
werkzeug = {extras = ["watchdog"], version = "^2.2.2"}

[tool.poetry.group.production]
optional = true

[tool.poetry.group.production.dependencies]
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
coverage = "^6.5.0"
django-debug-toolbar = "^3.7.0"
dlint = "^0.13.0"
factory-boy = "^3.2.1"
faker = "^15.3.2"
flake8 = "^5.0.4"
flake8-absolute-import = "^1.0.0.1"
flake8-bugbear = "^22.10.27"
flake8-class-attributes-order = "^0.1.3"
flake8-comprehensions = "^3.10.1"
flake8-debugger = "^4.1.2"
flake8-django = "^1.1.5"
flake8-newspaper-style = "^0.4.3"
flake8-no-implicit-concat = "^0.3.4"
flake8-no-pep420 = "^2.3.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.19.3"
flake8-warnings = "^0.4.0"
ipython = "^8.6.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"
pytest-mock = "^3.10.0"
werkzeug = "^2.2.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "apps,config"
line_length = 88
multi_line_output = 3
profile = "black"
skip = "venv/"
skip_glob = "**/migrations/*.py"
use_parentheses = true

[tool.coverage.run]
source = ["backend"]
